<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/primaryBackground"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryBackground"
            app:navigationIcon="@mipmap/ic_go_back"
            app:title="@string/setting_app_hider" />
        <TextView
            android:id="@+id/text_change_pin_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/clickable_size"
            android:text="@string/change_pin_code_for_apps"
            style="@style/Text"
            android:background="@color/colorAccentSecondary"
            android:textSize="25sp"
            android:layout_below="@+id/toolBar"/>
        <Button
            android:id="@+id/button_change_pin_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Change pin-code"
            android:layout_below="@id/text_change_pin_code"
            style="@style/Button"/>
        <TextView
            android:id="@+id/pin_to_open_hider_apps"
            android:layout_width="match_parent"
            android:layout_height="@dimen/clickable_size"
            android:text="@string/pin_to_open_hider_apps_input_your_phone"
            style="@style/Text"
            android:background="@color/colorAccentSecondary"
            android:textSize="16sp"
            android:layout_below="@id/button_change_pin_code"
            />
        <Button
            android:id="@+id/button_open_hider_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pin_to_open_hider_apps"
            android:layout_below="@id/pin_to_open_hider_apps"
            style="@style/Button"/>



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>