<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/searchViewBackgroundColor"
    android:orientation="vertical"
    tools:context=".EnterPinCode">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/searchViewBackgroundColor"
        android:paddingStart="@dimen/clickable_size_xsmall"
        android:paddingEnd="@dimen/clickable_size_xsmall"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/clickable_size_xlarge"
            android:layout_gravity="bottom"
            android:textStyle="bold"
            android:background="@color/colorWaitingDark"
            android:textSize="@dimen/font_medium_large"
            android:gravity="center_vertical|center"
            android:text="@string/yours_pin_code"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/searchViewBackgroundColor"
        android:paddingStart="@dimen/clickable_size_xsmall"
        android:paddingEnd="@dimen/clickable_size_xsmall"
        android:layout_weight="1">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_pin_code"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@color/drawerButtonTextColorNormal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/searchViewBackgroundColor"
        android:layout_weight="1"
        android:paddingStart="@dimen/clickable_size_xsmall"
        android:paddingEnd="@dimen/clickable_size_xsmall"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enter"/>
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>