<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryBackground"
            app:title="@string/change_function"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/spacing_small_large"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_app_hider"
                android:layout_width="match_parent"
                android:background="@color/colorBusyDark"
                android:layout_height="@dimen/clickable_size_xlarge"
                android:layout_gravity="center_vertical"
                android:onClick="enterPinCode"
                android:text="@string/app_hider" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/spacing_small_large"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_add_blocker"
                android:layout_width="match_parent"
                android:layout_height="@dimen/clickable_size_xlarge"
                android:background="@color/colorBusyDark"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/spacing_small_large"
                android:text="@string/add_blocker" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/spacing_small_large"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_sms_receiver"
                android:layout_width="0dp"
                android:layout_height="@dimen/clickable_size_xlarge"
                android:background="@color/colorBusyDark"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/sms_receiver" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>